# rauta

./: .gitguardian.yaml  .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_OLD.md  Dockerfile  ENVOY_ANALYSIS.md  ENVOY_EXPLORATION_README.md  ENVOY_EXPLORATION_SUMMARY.md  ENVOY_ROUTING_DIAGRAM.txt  INDEX_ENVOY_EXPLORATION.txt  LICENSE  Makefile  PERF_RESULTS_HTTP2.md  PRODUCTION_READINESS.md  PR_DESCRIPTION.md  README.md  SKAFFOLD.md  build_local.sh  docker-compose.observability.yml  docker-compose.yml  full_test_output.txt  http2_backend.py  justfile  load_test_results.txt  loadtest_output.txt  loadtest_workers.txt  progressive_load_test.sh  run_load_test.sh  setup.sh  skaffold.yaml  slow_backend.py  start_test_servers.sh  test_env.sh  test_graceful_shutdown.sh  (+2 more)
.github/: dependabot.yml
.github/workflows/: ci-old.yml.bak  ci.yml
benchmarks/: gateway-comparison.sh
bpf/: Cargo.toml  HEALTH_CHECK_ANALYSIS.md  README_STAGE2.md  STAGE2_SUMMARY.md  rust-toolchain.toml
bpf/.cargo/: config.toml
bpf/src/: forwarding.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
common/tests/: http_parsing_tests.rs  maglev_tests.rs  parser_contract_tests.rs
control/: Cargo.toml
control/examples/: http2_backend.rs  loadtest_runner.rs
control/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
control/src/apis/: metrics.rs  mod.rs
control/src/apis/gateway/: endpointslice_watcher.rs  gateway.rs  gateway_class.rs  gateway_index.rs  http_route.rs  mod.rs  secret_watcher.rs
control/src/apis/ingress/: ingress.rs  mod.rs
control/src/proxy/: backend_pool.rs  circuit_breaker.rs  filters.rs  forwarder.rs  health_checker.rs  http1_pool.rs  listener_manager.rs  metrics.rs  mod.rs  rate_limiter.rs  request_handler.rs  router.rs  server.rs  tls.rs  worker.rs
control/tests/: e2e.rs  e2e.rs.local  integration_test.rs  integration_tests.rs
control/tests/integration/: config.toml  mod.rs
control/tests/integration/framework/: assertions.rs  cluster.rs  cluster_provider.rs  fixtures.rs  k8s.rs  metrics.rs  mod.rs  sniffer.rs
control/tests/integration/framework/providers/: kind.rs  mod.rs
control/tests/integration/scenarios/: basic_routing.rs  endpointslice.rs  load_test.rs  mod.rs  tls_validation.rs
deploy/: README.md  demo-backend.yaml  deploy-to-kind.sh  gateway-api.yaml  kind-config.yaml  rauta-daemonset-test.yaml  rauta-daemonset.yaml  test-rate-limit.yaml
docker/: .dockerignore  Dockerfile.backend  Dockerfile.backend-local  Dockerfile.backend-multi  Dockerfile.control-local  Dockerfile.dev  Dockerfile.gateway  Dockerfile.kind  Dockerfile.prod  Dockerfile.test  README.md  benchmark.sh  build-quick.sh  build.sh  docker-compose.prod.yml  docker-compose.yml  test.sh
docs/: CONFORMANCE_RESEARCH.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  RELIABILITY_SUMMARY.md  test_report.md
docs/adr/: 001-hostnetwork-daemonset-architecture.md  002-active-health-checking-observability.md
docs/research/: EBPF_SOCKET_OBSERVABILITY.md
documents/: HTTP_PROXY_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  maglev-architecture.md
manifests/: 00-namespace.yaml  01-rbac.yaml  02-gatewayclass.yaml  03-daemonset.yaml  04-service.yaml  README.md
manifests/examples/: gateway.yaml  httproute.yaml
observability/: README.md  prometheus.yml
observability/grafana/dashboards/: rauta-performance.json
observability/grafana/provisioning/dashboards/: dashboard.yml
rfcs/: 000-template.md
scripts/: conformance-quick-start.sh  run-conformance.sh  setup-conformance.sh  setup_linux.sh  setup_macos.sh  test_graceful_shutdown.sh  test_logging.sh  watch_bpf.sh  watch_control.sh
scripts/git-hooks/: README.md  install.sh  pre-commit
test_fixtures/tls/: example.com-v2.crt  example.com-v2.key  example.com.crt  example.com.key  test.com.crt  test.com.key
tests/: README.md  integration_test.rs  integration_test.sh
tests/conformance/: README.md
tests/integration/: config.toml  mod.rs
tests/integration/framework/: assertions.rs  cluster.rs  fixtures.rs  k8s.rs  metrics.rs  mod.rs  sniffer.rs
tests/integration/scenarios/: basic_routing.rs  endpointslice.rs  load_test.rs  mod.rs  tls_validation.rs
