[package]
name = "bpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
common = { path = "../common", default-features = false, features = ["aya-ebpf"] }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[[bin]]
name = "rauta"
path = "src/main.rs"
