[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
aya = { version = "0.13", optional = true }
aya-ebpf = { version = "0.1", optional = true }

[features]
default = ["serde", "aya"]
std = []
aya-ebpf = ["dep:aya-ebpf"]
