[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
aya = { version = "0.13", optional = true }
aya-ebpf = { version = "0.1", optional = true }

[features]
# Stage 1: Only serde by default (no eBPF)
# Stage 2+: Add aya back to default
default = ["serde"]
std = []
aya = ["dep:aya"]
aya-ebpf = ["dep:aya-ebpf"]
