[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
common = { path = "../common", default-features = false, features = ["serde"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# eBPF (Aya framework) - Stage 2 only (disabled for Stage 1 pure Rust)
# aya = "0.13"
# aya-log = "0.2"

# Kubernetes
kube = { version = ">=1.0, <2.0", features = ["runtime", "derive"] }  # Updated to match k8s-openapi 0.25
k8s-openapi = { version = "0.25", features = ["v1_31"] }  # Updated to match gateway-api
kube-runtime = "1"  # Updated with kube

# Gateway API (official Rust bindings from kube-rs)
gateway-api = "0.16"  # Latest version with Gateway API v1.x support

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"

# Time handling (for Gateway API condition timestamps)
chrono = "0.4"

# HTTP Server (Week 1-2)
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Routing
matchit = "0.8"

# Metrics (Week 2)
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# Networking
libc = "0.2"

[build-dependencies]
# Note: aya-build is the correct package for build scripts, not aya-gen
# We don't need this currently as we're not generating bindings
