[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
common = { path = "../common", default-features = false, features = ["serde"] }
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"

# eBPF (Aya framework) - Stage 2 only (disabled for Stage 1 pure Rust)
# aya = "0.13"
# aya-log = "0.2"

# Kubernetes
kube = { version = ">=1.0, <2.0", features = ["runtime", "derive"] }  # Updated to match k8s-openapi 0.25
k8s-openapi = { version = "0.25", features = ["v1_31"] }  # Updated to match gateway-api
kube-runtime = "1"  # Updated with kube

# Gateway API (official Rust bindings from kube-rs)
gateway-api = "0.16"  # Latest version with Gateway API v1.x support

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
futures = "0.3"

# Time handling (for Gateway API condition timestamps)
chrono = "0.4"

# HTTP Server (Week 1-2)
hyper = { version = "1.0", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "server", "server-auto"] }
http-body-util = "0.1"

# Routing
matchit = "0.8"
regex = "1.11"  # For HTTPRoute header RegularExpression matching

# Metrics (Week 2)
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"
once_cell = "1.19"  # For regex cache lazy initialization

# Request tracing and IDs
uuid = { version = "1.0", features = ["v4", "fast-rng"] }

# Networking
libc = "0.2"

# Performance: jemalloc allocator (better for async workloads)
tikv-jemallocator = "0.6"

# TLS termination
rustls = { version = "0.23", features = ["ring"] }  # Use ring crypto provider
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

[build-dependencies]
# Note: aya-build is the correct package for build scripts, not aya-gen
# We don't need this currently as we're not generating bindings
