[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
common = { path = "../common", default-features = false, features = ["serde"] }
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"  # For CancellationToken
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.16"

# Kubernetes
kube = { version = ">=1.0, <2.0", features = ["runtime", "derive"] }  # Updated to match k8s-openapi 0.25
k8s-openapi = { version = "0.25", features = ["v1_31"] }  # Updated to match gateway-api
kube-runtime = "1"  # Updated with kube

# Gateway API (official Rust bindings from kube-rs)
gateway-api = "0.16"  # Latest version with Gateway API v1.x support

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # For Gateway YAML parsing in tests

# Async utilities
futures = "0.3"

# Time handling (for Gateway API condition timestamps)
chrono = "0.4"

# HTTP Server (Week 1-2)
hyper = { version = "1.0", features = ["server", "http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "server", "server-auto"] }
http-body-util = "0.1"

# Routing
matchit = "0.8"
regex = "1.11"  # For HTTPRoute header RegularExpression matching

# Metrics (Week 2)
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"
once_cell = "1.19"  # For regex cache lazy initialization

# Request tracing and IDs
uuid = { version = "1.0", features = ["v4", "fast-rng"] }

# Networking
libc = "0.2"

# Performance: jemalloc allocator (better for async workloads)
tikv-jemallocator = "0.6"

# TLS termination
rustls = { version = "0.23", features = ["ring"] }  # Use ring crypto provider
tokio-rustls = "0.26"
rustls-pemfile = "2.1"

[lints.clippy]
# CRITICAL: Prevent lock poisoning panics and unwraps in production code
# These lints ensure we use safe_read/safe_write/safe_lock helpers for locks
# and proper error handling (Result/Option) instead of unwrap/expect
# Note: Tests are allowed to use unwrap/expect via #[cfg_attr(test, allow(...))]
unwrap_used = "warn"  # Start with warn to see violations, then move to deny
expect_used = "warn"
panic = "warn"

[dev-dependencies]
# Certificate generation for integration tests
rcgen = "0.13"
time = "0.3"  # Required by rcgen for certificate validity dates

# Integration test dependencies
async-trait = "0.1"  # For async trait methods
reqwest = "0.12"     # HTTP client for testing
toml = "0.8"         # Config file parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# E2E testing with Kubernetes (path dep - only for local testing)
# Note: Comment out for Docker builds since seppo isn't in container
seppo = { path = "../../seppo" }

[build-dependencies]
